1.2.0 (2014-12-17):
* Add profiling tracepoints and labels (#13).  Introduces a dependency on `mirage-profile`.
* New `opam` file present in source repository for OPAM 1.2 workflow.

1.1.3 (2014-08-08):
* Revert the serialization in 1.1.2 as Xen/ARM (4.5 and backport to 4.4)
  has been fixed to support granting the same page multiple times.
  Backport is in https://github.com/mirage/xen-arm-builder.

1.1.2 (2014-07-23):
* Wait for packets to be processed by the backend before returning from
  a `writev` call. Without this, the caller has no way to know when
  it's safe to reuse the buffer (#11).

1.1.1 (2014-05-27):
* Do not send oversized frames to the backend Netfront (#9 from Edwin Torok).

1.1.0 (2014-02-01):
* Depend on the unified io-page library instead of io-page-xen.
* Depend on new `xen-event` and `xen-grant` packages.

0.9.0 (2013-12-10):
* Add Travis CI scripts.
* Adapt to V1.NETWORK from mirage-types-0.5.0.
* Initial release based on mirage-platform-0.9.8 Netif.